# FastAPI-Order-Service-TT

./: .env_copy  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  postgresql_terminal.sh  pyproject.toml
app/: config.py
app/routers/orders/: order.py
app/routers/products/: product.py
app/schemas/: client.py  order.py  order_product.py  product.py
app/services/: order_service.py  product_service.py
database/: db_session.py  queries.sql  schema.sql
database/fill_db/: categories.sql  clients.sql  orders.sql  orders_products.sql  products.sql
database/models/: __init__.py  base_model.py  category.py  client.py  order.py  order_product.py  product.py
