[tool.poetry]
name = "FastAPI-Order-Service-TT"
version = "0.1.0"
description = "FastAPI Order Service (Technical Task)"
authors = ["artyombn <balabashinan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
sqlalchemy = "^2.0.45"
pydantic-settings = "^2.12.0"
psycopg2-binary = "^2.9.11"
asyncpg = "^0.31.0"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


